# zed-globalization

./: .gitignore  LICENSE  README.md  patch_agent_env.py  pyproject.toml  scan_result.json  string.json  zed-globalization.json  zedg-preview.json  zedg.json
.github/workflows/: 01-scan.yml  01-translate.yml  02-build.yml  02-translate.yml  03-build.yml  03-update-scoop.yml  04-update-homebrew.yml  04-update-scoop.yml
config/: crowdin.yml  do_not_translate.json  glossary.yaml
docs/: README.en.md  README.ja.md  README.ko.md
i18n/: zh-CN.json
i18n/v0.227.0-pre/: zh-CN.json
i18n/v0.227.1/: zh-CN.json
i18n/v0.227.1-pre/: zh-CN.json
i18n/v0.228.0/: zh-CN.json
i18n/v0.228.0-pre/: zh-CN.json
i18n/v0.229.0/: zh-CN.json
i18n/v0.230.0/: zh-CN.json
i18n/v0.230.0-pre/: zh-CN.json
i18n/v0.230.2/: zh-CN.json
i18n/v0.231.0-pre/: zh-CN.json
i18n/v0.231.1/: zh-CN.json
i18n/v0.232.0-pre/: zh-CN.json
i18n/v0.232.2/: zh-CN.json
i18n/v0.232.2-pre/: zh-CN.json
i18n/v0.232.3/: zh-CN.json
i18n/v0.233.1-pre/: zh-CN.json
i18n/v0.233.10/: zh-CN.json
i18n/v0.233.2-pre/: zh-CN.json
i18n/v0.233.3-pre/: zh-CN.json
i18n/v0.233.5-pre/: zh-CN.json
i18n/v0.233.7/: zh-CN.json
i18n/v0.233.8/: zh-CN.json
i18n/v0.233.9/: zh-CN.json
i18n/v0.234.2-pre/: zh-CN.json
i18n/v0.234.3-pre/: zh-CN.json
packaging/: move
sccache/: sccache-linux-aarch64.runid  sccache-linux-x86_64.runid  sccache-macos-aarch64.runid  sccache-macos-x86_64.runid  sccache-windows-aarch64.runid  sccache-windows-x86_64.runid
script/: package-rpm.sh
scripts/: rebrand.py
(+37 files in other folders)
